--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,35 @@
-fastapi
-uvicorn
-sqlalchemy
-passlib
-python-jose
-pydantic
-psycopg2
-uvicorn
-alembic
+Package           Version
+----------------- -------
+alembic           1.13.3
+annotated-types   0.7.0
+anyio             4.6.1
+async-timeout     4.0.3
+asyncpg           0.29.0
+bcrypt            4.2.0
+click             8.1.7
+colorama          0.4.6
+ecdsa             0.19.0
+exceptiongroup    1.2.2
+fastapi           0.115.2
+greenlet          3.1.1
+h11               0.14.0
+idna              3.10
+Mako              1.3.5
+MarkupSafe        3.0.1
+passlib           1.7.4
+pip               21.2.3
+psycopg2          2.9.9
+psycopg2-binary   2.9.10
+pyasn1            0.6.1
+pydantic          2.9.2
+pydantic_core     2.23.4
+python-dotenv     1.0.1
+python-jose       3.3.0
+rsa               4.9
+setuptools        57.4.0
+six               1.16.0
+sniffio           1.3.1
+SQLAlchemy        2.0.35
+starlette         0.39.2
+typing_extensions 4.12.2
+uvicorn           0.31.1
