--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,20 +6,25 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    env_file:
-      - .env # Load environment variables from .env file
+
     ports:
-      - "8000:8000"
+      - "8080:8080"
     depends_on:
       - db
     volumes:
       - .:/code # Mount the source code to the container
-    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+    command:
+      [
+        "sh",
+        "-c",
+        "alembic upgrade head && uvicorn app.main:app --host 0.0.0.0 --port 8080",
+      ]
 
   db:
     image: postgres:13
     env_file:
       - .env
+
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
