--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
       dockerfile: Dockerfile
 
     ports:
-      - "8080:8080"
+      - "8000:8000"
     depends_on:
       - db
     volumes:
@@ -17,7 +17,7 @@ services:
       [
         "sh",
         "-c",
-        "alembic upgrade head && uvicorn app.main:app --host 0.0.0.0 --port 8080",
+        "./wait-for-it.sh db:5432 && alembic upgrade head && uvicorn app.main:app --host 0.0.0.0 --port 8000",
       ]
 
   db:
